--- a/SpeechRecognition.ipynb
+++ b/SpeechRecognition.ipynb
@@ -6,7 +6,7 @@
       "name": "SpeechRecognition.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPk3q98kqwKMVBWaAkhD5+6"
+      "authorship_tag": "ABX9TyPJqJxGv3+bGNLT2EET2u3I"
     },
     "kernelspec": {
       "name": "python3",
@@ -5227,33 +5227,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "clDO11Tajpvh",
-        "outputId": "24b9e767-2db7-440b-e647-3be2feffa600",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "clDO11Tajpvh",
+        "outputId": "b37a7c5d-8a7a-4c3e-9b09-0164f8c2b59d"
       },
       "source": [
         "Data=np.array(Data)\n",
         "Datafr=pd.DataFrame(columns=['feature','label'])\n",
         "Datafr['feature']=Data\n",
         "Datafr['label']=label\n",
+        "for i in range (0,7442):\n",
+        "  check_for_nan = Datafr['feature'][i]\n",
+        "  array_sum = np.sum(check_for_nan)\n",
+        "  array_has_nan = np.isnan(array_sum)\n",
+        "  if(array_has_nan):\n",
+        "    Datafr['feature'] = Datafr['feature'][i].replace(np.nan, 0)\n",
         "\n",
-        "temp=np.array(Data[0])\n",
-        "print()\n",
+        "\n",
         "\n",
         "Datafr"
       ],
-      "execution_count": 71,
+      "execution_count": 102,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -49944,176 +49942,21 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 102
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VsHQROdHQHF2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "616b0061-48c8-4706-ea5f-daf6e1eb41b7"
+        "id": "Ua2ThpKdzo_B"
       },
       "source": [
-        "df = pd.DataFrame()\n",
-        "\n",
-        "df['Data']=Data\n",
-        "df['label']=label\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "check_for_nan = df['set_of_numbers'].isnull().values.any()\n",
+        "print (check_for_nan)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[   7.33447266,  151.89909363, 1585.02368067],\n",
-              "       [   6.79345703,   18.64197731, 1531.08629143],\n",
-              "       [   5.73144531,  204.20968628, 1486.425951  ],\n",
-              "       ...,\n",
-              "       [   9.39794922,   13.16592598, 1850.84214849],\n",
-              "       [   8.26025391,   10.28921509, 1787.90415708],\n",
-              "       [   7.84912109,    3.21663356, 1680.54253752]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 115
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 418
-        },
-        "id": "hr1YZe0Amx2m",
-        "outputId": "d1c2cf4d-1415-4924-f622-63b9c9c9d05a"
-      },
-      "source": [
-        "df"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Data</th>\n",
-              "      <th>label</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>[7.33447265625, 151.8990936279297, 1585.023680...</td>\n",
-              "      <td>ANG</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>[6.79345703125, 18.641977310180664, 1531.08629...</td>\n",
-              "      <td>DIS</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>[5.7314453125, 204.20968627929688, 1486.425950...</td>\n",
-              "      <td>FEA</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>[5.0078125, 123.90792083740234, 1555.691947457...</td>\n",
-              "      <td>HAP</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>[5.25, 30.32518768310547, 1494.2923012391982]</td>\n",
-              "      <td>NEU</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7437</th>\n",
-              "      <td>[9.3759765625, 4.555999755859375, 1757.6775742...</td>\n",
-              "      <td>DIS</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7438</th>\n",
-              "      <td>[7.61279296875, 4.507688045501709, 1675.170460...</td>\n",
-              "      <td>FEA</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7439</th>\n",
-              "      <td>[9.39794921875, 13.165925979614258, 1850.84214...</td>\n",
-              "      <td>HAP</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7440</th>\n",
-              "      <td>[8.26025390625, 10.289215087890625, 1787.90415...</td>\n",
-              "      <td>NEU</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7441</th>\n",
-              "      <td>[7.84912109375, 3.2166335582733154, 1680.54253...</td>\n",
-              "      <td>SAD</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>7442 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                                   Data label\n",
-              "0     [7.33447265625, 151.8990936279297, 1585.023680...   ANG\n",
-              "1     [6.79345703125, 18.641977310180664, 1531.08629...   DIS\n",
-              "2     [5.7314453125, 204.20968627929688, 1486.425950...   FEA\n",
-              "3     [5.0078125, 123.90792083740234, 1555.691947457...   HAP\n",
-              "4         [5.25, 30.32518768310547, 1494.2923012391982]   NEU\n",
-              "...                                                 ...   ...\n",
-              "7437  [9.3759765625, 4.555999755859375, 1757.6775742...   DIS\n",
-              "7438  [7.61279296875, 4.507688045501709, 1675.170460...   FEA\n",
-              "7439  [9.39794921875, 13.165925979614258, 1850.84214...   HAP\n",
-              "7440  [8.26025390625, 10.289215087890625, 1787.90415...   NEU\n",
-              "7441  [7.84912109375, 3.2166335582733154, 1680.54253...   SAD\n",
-              "\n",
-              "[7442 rows x 2 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 116
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
