--- a/SpeechRecognition.ipynb
+++ b/SpeechRecognition.ipynb
@@ -6390,7 +6390,7 @@
         "#Replacing Nan values with zeros\n",
         "Data=Data.fillna(0)\n",
         "#Add Labels to the data\n",
-        "Data.insert(20096, \"Label\", label, True)\n",
+        "Data.insert(20096, \"Label\", label2d, True)\n",
         "Data"
       ],
       "execution_count": 13,
